@@ -1127,6 +1127,8 @@ forms to subroutines.
 
 * New Packages for Lisp Programming in Emacs 23.1
 
+** find-cmd.el can build `find' commands using lisp synax.
+
 ** The package isearch-multi.el has been added.  It implements a new mode
 `isearch-buffers-minor-mode' that allows isearch to search through
 multiple buffers.  In this mode a new variable
